--- a/dev.html
+++ b/dev.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SpeedScope</title>
+  <title>speedscope</title>
 	<link rel="stylesheet" href="reset.css">
   </style>
 </head>
