--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>speedscope</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+  <link href="source-code-pro.css" rel="stylesheet">
   <script>
     // https://github.com/evanw/webgl-recorder
     false && (function () {
