--- a/assets/index.html
+++ b/assets/index.html
@@ -166,7 +166,7 @@
 </head>
 
 <body>
-  <script src="../src/speedscope.tsx"></script>
+  <script type="module" src="../src/speedscope.tsx"></script>
 </body>
 
 </html>
