Revert "Upgrade to parcel 2.13.3 (#492)"
This reverts commit c7be11d4e0fc5882821ac997415e34519cdf6323.

--- a/assets/index.html
+++ b/assets/index.html
@@ -166,7 +166,7 @@
 </head>
 
 <body>
-  <script type="module" src="../src/speedscope.tsx"></script>
+  <script src="../src/speedscope.tsx"></script>
 </body>
 
 </html>
