Move compiled JS assets into assets/dist

--- a/assets/index.html
+++ b/assets/index.html
@@ -166,7 +166,7 @@
 </head>
 
 <body>
-  <script type="module" src="speedscope.js"></script>
+  <script type="module" src="dist/speedscope.js"></script>
 </body>
 
 </html>
