--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>speedscope</title><link href="source-code-pro.52b1676f.css" rel="stylesheet"><script></script><link rel="stylesheet" href="reset.8c46b7a1.css"><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.bc503437.png"><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.f74b3187.png"></head><body> <script src="speedscope.6f107512.js"></script>
-</body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>speedscope</title>
+    <link rel="stylesheet" href="speedscope-GHPHNKXC.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32-3EB2YCUY.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16-VSI62OPJ.png">
+    <link rel="icon" type="image/x-icon" href="favicon-FOKUP5Y5.ico">
+  </head>
+  <body>
+    <script src="speedscope-WY3AEXLT.js" type="module"></script>
+    <script src="chunk-44YACRSX.js" type="module"></script>
+    <script src="chunk-FW4363Y4.js" type="module"></script>
+    <script src="source-map-5DQ363YZ.js" type="module" async></script>
+    <script src="import-DELK24RS.js" type="module" async></script>
+    <script src="demangle-cpp-P7QR5U2F.js" type="module" async></script>
+    <script src="source-map-5DQ363YZ.js" type="module" async></script>
+    <link rel="preload" href="SourceCodePro-Regular.ttf-ILST5JV6.woff2" as="font" type="font/woff2" crossorigin>
+  </body>
+</html>
