--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="icon" type="image/x-icon" href="favicon-FOKUP5Y5.ico">
   </head>
   <body>
-    <script src="speedscope-WY3AEXLT.js" type="module"></script>
-    <script src="chunk-44YACRSX.js" type="module"></script>
+    <script src="speedscope-WALCIMKQ.js" type="module"></script>
+    <script src="chunk-WXBMBICR.js" type="module"></script>
     <script src="chunk-FW4363Y4.js" type="module"></script>
     <script src="source-map-5DQ363YZ.js" type="module" async></script>
-    <script src="import-DELK24RS.js" type="module" async></script>
+    <script src="import-OIHRKYQB.js" type="module" async></script>
     <script src="demangle-cpp-P7QR5U2F.js" type="module" async></script>
     <script src="source-map-5DQ363YZ.js" type="module" async></script>
     <link rel="preload" href="SourceCodePro-Regular.ttf-ILST5JV6.woff2" as="font" type="font/woff2" crossorigin>
