--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="icon" type="image/x-icon" href="favicon-FOKUP5Y5.ico">
   </head>
   <body>
-    <script src="speedscope-JXPS5DO2.js" type="module"></script>
-    <script src="chunk-UXCJ7GBH.js" type="module"></script>
+    <script src="speedscope-63TIOGXJ.js" type="module"></script>
+    <script src="chunk-FEF2E4FS.js" type="module"></script>
     <script src="chunk-FW4363Y4.js" type="module"></script>
     <script src="source-map-5DQ363YZ.js" type="module" async></script>
-    <script src="import-RFCRNPIH.js" type="module" async></script>
+    <script src="import-V3GXQVOI.js" type="module" async></script>
     <script src="demangle-B53S5JWH.js" type="module" async></script>
     <script src="source-map-5DQ363YZ.js" type="module" async></script>
     <link rel="preload" href="SourceCodePro-Regular.ttf-ILST5JV6.woff2" as="font" type="font/woff2" crossorigin>
